tests/ifcc-test-output/testfiles-ReturnZNotDeclared/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:11: error: redeclaration of ‘x’ with no linkage
    2 |     int x,x,y,z;
      |           ^
input.c:2:9: note: previous declaration of ‘x’ with type ‘int’
    2 |     int x,x,y,z;
      |         ^

exit status: 1
